--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 h1{
-    color:blue;
+    color:red;
+    background-color: black;
+    font-family: papyrus
 }
+
+ol {
+    list-style-type: upper-roman;
+  }
